--- a/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/pages/destinos-nacionais.html
+++ b/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/pages/destinos-nacionais.html
@@ -28,7 +28,7 @@
     <main>
       <header class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
         <div class="container">
-          <a class="navbar-brand" href="/"
+          <a class="navbar-brand" href="../."
             ><img
               src="../images/logos/herlivre.png"
               width="200px"
@@ -53,7 +53,7 @@
           >
             <ul class="navbar-nav text-center d-flex align-items-center">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
+                <a class="nav-link" aria-current="page" href="../.">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="destinos-nacionais.html"
@@ -327,7 +327,7 @@
         <div class="container py-4">
           <div class="row mt-3">
             <div class="col-12 text-center">
-              <a class="navbar-brand" href="/"
+              <a class="navbar-brand" href="../."
                 ><img src="../images/logos/herlivre.png" width="200px"
               /></a>
             </div>
