--- a/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/index.html
+++ b/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/index.html
@@ -28,7 +28,7 @@
     <main>
       <header class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
         <div class="container">
-          <a class="navbar-brand" href="/"
+          <a class="navbar-brand" href="./"
             ><img
               src="./images/logos/herlivre.png"
               width="200px"
@@ -53,7 +53,7 @@
           >
             <ul class="navbar-nav text-center d-flex align-items-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="./"
                   >Home</a
                 >
               </li>
@@ -474,7 +474,7 @@
         <div class="container py-4">
           <div class="row mt-3">
             <div class="col-12 text-center">
-              <a class="navbar-brand" href="/"
+              <a class="navbar-brand" href="./"
                 ><img src="./images/logos/herlivre.png" width="200px"
               /></a>
             </div>
