consertando ícone nav

--- a/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/index.html
+++ b/atividade-prática-módulo-2/protótipo-site-herlivre-viagens/index.html
@@ -95,7 +95,7 @@
                 <a class="nav-link d-flex" href="pages/login.html">
                   <img
                     width="24px"
-                    src="images/icons/login.svg"
+                    src="./images/icons/login.svg"
                     alt="ícone de login"
                   />
                   <span class="ms-1">Entrar</span>
