back-end semi-pronto

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -137,7 +137,7 @@
                     placeholder="Busque uma cidade" required />
                 </div>
                 <!--FIM INPUT BUSCAR CIDADES OU HOTÉIS-->
-
+                <input type="time" />
                 <!--INÍCIO INPUT DATA IDA/VOLTA-->
                 <label class="text-muted mt-3">Escolha o período de Ida/Volta</label>
                 <br />
