--- a/front-end/index.html
+++ b/front-end/index.html
@@ -137,9 +137,9 @@
                     placeholder="Busque uma cidade" required />
                 </div>
                 <!--FIM INPUT BUSCAR CIDADES OU HOTÉIS-->
-                <input type="time" />
+
                 <!--INÍCIO INPUT DATA IDA/VOLTA-->
-                <label class="text-muted mt-3">Escolha o período de Ida/Volta</label>
+                <label class="text-muted mt-3">Escolha o período de Ida</label>
                 <br />
                 <div class="d-sm-flex justify-content-center justify-content-xl-start">
                   <div class="w-100 d-flex border border-2 rounded-3 mb-2 mb-sm-0 p-2 me-2">
@@ -147,11 +147,11 @@
                     <input id="dataIda" style="outline: none" class="w-100 border-0" type="date" name="dataIda"
                       required />
                   </div>
-                  <div class="w-100 d-flex border border-2 rounded-3 p-2">
+                  <!-- <div class="w-100 d-flex border border-2 rounded-3 p-2">
                     <label for="dataVolta" class="text-muted me-1" style="white-space: nowrap">Volta |</label>
                     <input id="dataVolta" style="outline: none" class="w-100 border-0" type="date" name="dataVolta"
                       required />
-                  </div>
+                  </div> -->
                 </div>
                 <!--FIM INPUT DATA IDA/VOLTA-->
 
