--- a/front-end/pages/contato.html
+++ b/front-end/pages/contato.html
@@ -19,7 +19,7 @@
   <main>
     <header class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
       <div class="container">
-        <a class="navbar-brand" href="../."><img src="../images/logos/herlivre.png" width="200px"
+        <a class="navbar-brand" href="../index.html"><img src="../images/logos/herlivre.png" width="200px"
             alt="logo herlivre" /></a>
 
         <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="collapse"
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse d-md-flex justify-content-md-end" id="navbarNav">
           <ul class="navbar-nav text-center d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../.">Home</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./destinos-nacionais.html">Destino</a>
@@ -145,7 +145,7 @@
       <div class="container py-4">
         <div class="row mt-3">
           <div class="col-12 text-center">
-            <a class="navbar-brand" href="../."><img src="../images/logos/herlivre.png" width="200px" /></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/logos/herlivre.png" width="200px" /></a>
           </div>
           <!--col-->
         </div>
